admin importstatus interface

--- a/app/index.html
+++ b/app/index.html
@@ -194,6 +194,8 @@
 	<script src="scripts/controllers/document.js"></script>
 
 	<script src="scripts/controllers/profile.js"></script>
+
+	<script src="scripts/controllers/admin/importstatus.js"></script>
 	<!-- endbuild -->
 
 </body>
