Logo, CSS, stuff
I did things.

--- a/app/index.html
+++ b/app/index.html
@@ -35,10 +35,10 @@
 		<section class="sidebar" ng-controller="SidebarController">
 
 			<header>
-				<h1><a href="#">shownot.es</a></h1>
-			</header>
+				<h1><a href="#"><img src="images/shownotes-logo.svg" alt="shownot.es" /></a></h1>
 
-			<p>Die kollaborative Plattform für Sendungsnotizen. <a href="#">Was ist das?</a></p>
+				<p>Die kollaborative Plattform für Sendungsnotizen. <a href="#">Was ist das?</a></p>
+			</header>
 
 			<nav class="account">
 				<ul>
