--- a/app/index.html
+++ b/app/index.html
@@ -170,6 +170,10 @@
 	<!-- endbower -->
 	<!-- endbuild -->
 
+	<!-- build:js scripts/vendor.js -->
+	<script src="bower_components/ngLocale/angular-locale_de-de.js"></script>
+	<!-- endbuild -->
+
 	<!-- build:js({.tmp,app}) scripts/scripts.js -->
 	<script src="scripts/app.js"></script>
 	<script src="scripts/controllers/livelist.js"></script>
