livelist create document

--- a/app/index.html
+++ b/app/index.html
@@ -171,6 +171,7 @@
 	<!-- build:js({.tmp,app}) scripts/scripts.js -->
 	<script src="scripts/app.js"></script>
 	<script src="scripts/controllers/livelist.js"></script>
+	<script src="scripts/services/document.js"></script>
 
 	<script src="scripts/controllers/sidebar.js"></script>
 	<script src="scripts/services/authentication.js"></script>
