--- a/app/index.html
+++ b/app/index.html
@@ -11,17 +11,31 @@
 	<meta name="description" content="" />
 	<base href="/">
 
-	<!--<link rel="shortcut icon" type="image/x-icon" href="" />-->
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+	<link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
+	<link rel="icon" type="image/png" href="/favicon-196x196.png" sizes="196x196">
+	<link rel="icon" type="image/png" href="/favicon-160x160.png" sizes="160x160">
+	<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
+	<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+	<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+	<meta name="msapplication-TileColor" content="#40a662">
+	<meta name="msapplication-TileImage" content="/mstile-144x144.png">
+
 	<!-- build:css styles/vendor.css -->
 	<!-- bower:css -->
-	<link rel="stylesheet" href="bower_components/fira/fira.css" />
-	<link rel="stylesheet" href="bower_components/spectrum/spectrum.css" />
-	<link rel="stylesheet" href="bower_components/angular-busy/dist/angular-busy.css" />
+	<link rel="stylesheet" type="text/css" href="bower_components/fira/fira.css" />
+	<link rel="stylesheet" type="text/css" href="bower_components/spectrum/spectrum.css" />
+	<link rel="stylesheet" type="text/css" href="bower_components/angular-busy/dist/angular-busy.css" />
 	<!-- endbower -->
 	<!-- endbuild -->
 	<!-- build:css(.tmp) styles/main.css -->
-	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" type="text/css" href="styles/main.css" media="screen, print" />
 	<!-- endbuild -->
 </head>
 
