--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,14 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link type="text/plain" rel="author" href="humans.txt" />
-	<meta name="description" content="" />
+	<meta name="robots" content="index, follow" />
+	<meta name="description" content="Die kollaborative Plattform für Sendungsnotizen" />
+	<meta name="keywords" content="
+	 _____ _____ _____ _____    _____ _____ _____ 
+	|   __|  |  |     |  |  |  |   __|   __|     |
+	|   __|  |  |   --|    -|  |__   |   __|  |  |
+	|__|  |_____|_____|__|__|  |_____|_____|_____|                              
+	" />
 	<base href="/">
 
 	<link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
