Whoops. No type attribute for bower-generated CSS.

--- a/app/index.html
+++ b/app/index.html
@@ -36,9 +36,9 @@
 
 	<!-- build:css styles/vendor.css -->
 	<!-- bower:css -->
-	<link rel="stylesheet" type="text/css" href="bower_components/fira/fira.css" />
-	<link rel="stylesheet" type="text/css" href="bower_components/spectrum/spectrum.css" />
-	<link rel="stylesheet" type="text/css" href="bower_components/angular-busy/dist/angular-busy.css" />
+	<link rel="stylesheet" href="bower_components/fira/fira.css" />
+	<link rel="stylesheet" href="bower_components/spectrum/spectrum.css" />
+	<link rel="stylesheet" href="bower_components/angular-busy/dist/angular-busy.css" />
 	<!-- endbower -->
 	<!-- endbuild -->
 	<!-- build:css(.tmp) styles/main.css -->
