--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
 	 _____ _____ _____ _____    _____ _____ _____ 
 	|   __|  |  |     |  |  |  |   __|   __|     |
 	|   __|  |  |   --|    -|  |__   |   __|  |  |
-	|__|  |_____|_____|__|__|  |_____|_____|_____|                              
+	|__|  |_____|_____|__|__|  |_____|_____|_____|
 	" />
 	<base href="/">
 
@@ -57,7 +57,17 @@
 			</div>
 
 			<header>
-				<h1><a href="#"><img src="images/shownotes-logo.svg" alt="shownot.es" /></a></h1>
+				<h1><a href="#">
+
+					<object class="large" type="image/svg+xml" data="images/shownotes-logo.svg">
+						<img src="images/shownotes-logo.png" alt="shownot.es" />
+					</object>
+
+					<object class="small" type="image/svg+xml" data="images/shownotes-signet.svg">
+						<img src="images/shownotes-logo.png" alt="shownot.es" />
+					</object>
+
+				</a></h1>
 			</header>
 
 			<nav class="account">
