--- a/app/index.html
+++ b/app/index.html
@@ -221,6 +221,8 @@
 
 	<script src="scripts/controllers/document.js"></script>
 
+	<script src="scripts/controllers/document-readonly.js"></script>
+
 	<script src="scripts/controllers/profile.js"></script>
 
 	<script src="scripts/controllers/admin/importstatus.js"></script>
