include handlebars and osf-templates

--- a/app/index.html
+++ b/app/index.html
@@ -197,6 +197,7 @@
 	<script src="bower_components/restangular/dist/restangular.js"></script>
 	<!-- endbower -->
 	<script src="bower_components/ngLocale/angular-locale_de-de.js"></script>
+	<script src="bower_components/handlebars/handlebars.runtime.js"></script>
 	<!-- endbuild -->
 
 	<!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -226,6 +227,8 @@
 	<script src="scripts/controllers/profile.js"></script>
 
 	<script src="scripts/controllers/admin/importstatus.js"></script>
+
+	<script src="scripts/osf-templates.js"></script>
 	<!-- endbuild -->
 
 	<script type="text/javascript" src="//api.flattr.com/js/0.6/load.js?mode=auto" async></script>
