Unfinished crap (Logo, Footer, Things)

--- a/app/index.html
+++ b/app/index.html
@@ -59,13 +59,9 @@
 			<header>
 				<h1><a href="#">
 
-					<object class="large" type="image/svg+xml" data="images/shownotes-logo.svg">
-						<img src="images/shownotes-logo.png" alt="shownot.es" />
-					</object>
+					<img class="large" src="images/shownotes-logo.svg" alt="shownot.es" />
 
-					<object class="small" type="image/svg+xml" data="images/shownotes-signet.svg">
-						<img src="images/shownotes-logo.png" alt="shownot.es" />
-					</object>
+					<img class="small" src="images/shownotes-signet.svg" alt="shownot.es" />
 
 				</a></h1>
 			</header>
@@ -170,7 +166,6 @@
 				<p>Alle Inhalte stehen, soweit nicht anders vermerkt, unter der <a href="https://creativecommons.org/publicdomain/zero/1.0/deed.de" rel="license" title="CC0 1.0 Universell (Public Domain Dedication)">CC0-Lizenz</a>.</p>
 				<p>Ein Projekt des <a href="#">Shownotes e.V.</a>.</p>
 
-				<!-- Flattr -->
 				<a class="FlattrButton" style="display:none;" href="http://shownot.es/"></a>
 
 			</footer>
