Archive & podcast view

--- a/app/index.html
+++ b/app/index.html
@@ -137,7 +137,7 @@
 						<label for="search"><span class="icon-search"></span></label><input type="search" id="search" value="" placeholder="Suche &hellip;" />
 					</li>
 					<li title="Sendungen">
-						<a href="#">
+						<a href="/archive">
 							<span class="icon-podcast"></span><span class="caption">Sendungen</span>
 						</a>
 					</li>
