doc-readonly and css fixes

--- a/app/index.html
+++ b/app/index.html
@@ -141,7 +141,7 @@
 						</a>
 					</li>
 					<li title="Häufig gestellte Fragen">
-						<a href="#">
+						<a href="/faq">
 							<span class="icon-info"></span><span class="caption">Häufig gestellte Fragen</span>
 						</a>
 					</li>
