search view, some content

--- a/app/index.html
+++ b/app/index.html
@@ -150,11 +150,11 @@
 							<span class="icon-bubbles"></span><span class="caption">Community</span>
 						</a>
 					</li>
-					<!-- <li title="Administration">
-						<a href="#">
+					<li title="Administration">
+						<a href="/admin">
 							<span class="icon-settings"></span><span class="caption">Administration</span>
 						</a>
-					</li> -->
+					</li>
 				</ul>
 			</nav>
 
