doc-view: new websocket chat interface

--- a/app/index.html
+++ b/app/index.html
@@ -187,9 +187,11 @@
 	<script src="bower_components/angular-busy/dist/angular-busy.js"></script>
 	<script src="bower_components/lodash/dist/lodash.compat.js"></script>
 	<script src="bower_components/restangular/dist/restangular.js"></script>
+	<script src="bower_components/angular-socket-io/socket.js"></script>
 	<!-- endbower -->
 	<script src="bower_components/ngLocale/angular-locale_de-de.js"></script>
 	<script src="bower_components/handlebars/handlebars.runtime.js"></script>
+	<script src="bower_components/socket.io-client/socket.io.js"></script>
 	<!-- endbuild -->
 
 	<!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -213,6 +215,7 @@
 	<script src="scripts/controllers/user/pwreset.js"></script>
 
 	<script src="scripts/controllers/document.js"></script>
+	<script src="scripts/factories/docChatSocket.js"></script>
 
 	<script src="scripts/controllers/document-readonly.js"></script>
 
