--- a/app/index.html
+++ b/app/index.html
@@ -185,6 +185,7 @@
 	<script src="bower_components/spectrum/spectrum.js"></script>
 	<script src="bower_components/angular-spectrum-colorpicker/dist/angular-spectrum-colorpicker.js"></script>
 	<script src="bower_components/angular-busy/dist/angular-busy.js"></script>
+	<script src="bower_components/nunjucks/browser/nunjucks.min.js"></script>
 	<script src="bower_components/lodash/dist/lodash.compat.js"></script>
 	<script src="bower_components/restangular/dist/restangular.js"></script>
 	<script src="bower_components/angular-socket-io/socket.js"></script>
