--- a/app/index.html
+++ b/app/index.html
@@ -197,6 +197,7 @@
 
 	<!-- build:js({.tmp,app}) scripts/scripts.js -->
 	<script src="scripts/app.js"></script>
+	<script src="scripts/config.js"></script>
 	<script src="scripts/controllers/livelist.js"></script>
 	<script src="scripts/services/document.js"></script>
 
