add documentEditor directive to handle editor iframes

--- a/app/index.html
+++ b/app/index.html
@@ -100,6 +100,7 @@
 
     <!-- documents -->
     <script src="components/document/DocumentSvc.js"></script>
+    <script src="components/document/documentEditor.js"></script>
 
     <script src="components/document/edit/DocumentEditCtrl.js"></script>
     <script src="components/document/edit/docEditChatSocket.js"></script>
