introduce name-list directive
holds a list of names, used by podcaster and shownoter lists
use in sighting for both lists
use in document-edit for podcaster list
add deleting to podcaster list in document-edit

--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,8 @@
 	<script src="components/app.js"></script>
 	<script src="components/config.js"></script>
 
+    <script src="components/shared/namelist/nameList.js"></script>
+
     <!-- start page -->
 	<script src="components/livelist/LiveListCtrl.js"></script>
 
