tiny chnages. you won't even notice them.
I’m too lazy right now.

--- a/app/403.html
+++ b/app/403.html
@@ -2,3 +2,5 @@
 <h3>Zugriff verboten</h3>
 
 <p>Entschuldige, aber du hast nicht die nötigen Rechte, um den gewünschten Inhalt abzurufen.</p>
+
+<p><a href="/"><span class="icon-arrow-left"></span> Zur Startseite</a></p>
