--- a/app/404.html
+++ b/app/404.html
@@ -2,3 +2,5 @@
 <h3>Dokument nicht gefunden</h3>
 
 <p>Entschuldige, aber der gewünschte Inhalt existiert nicht oder wurde bereits gelöscht.</p>
+
+<p><a href="/"><span class="icon-arrow-left"></span> Zur Startseite</a></p>
