--- a/app/index.html
+++ b/app/index.html
@@ -104,6 +104,7 @@
     <!-- documents -->
     <script src="components/document/DocumentSvc.js"></script>
     <script src="components/document/documentEditor.js"></script>
+    <script src="components/document/render/documentRender.js"></script>
 
     <script src="components/document/edit/DocumentEditCtrl.js"></script>
     <script src="components/document/edit/docEditChatSocket.js"></script>
