--- a/app/index.html
+++ b/app/index.html
@@ -113,6 +113,13 @@
 
     <script src="components/document/sighting/DocumentSightingCtrl.js"></script>
 
+    <!-- archive -->
+    <script src="components/archive/archive/ArchiveCtrl.js"></script>
+    <script src="components/archive/archive/box/PodcastArchiveBox.js"></script>
+
+    <script src="components/archive/ArchiveService.js"></script>
+    <script src="components/archive/PodcastService.js"></script>
+
     <!-- admin -->
     <script src="components/admin/importstatus/ImportStatusCtrl.js"></script>
     <script src="components/admin/sighting/AdminSightingCtrl.js"></script>
