--- a/app/index.html
+++ b/app/index.html
@@ -117,6 +117,8 @@
     <script src="components/archive/archive/ArchiveCtrl.js"></script>
     <script src="components/archive/archive/box/PodcastArchiveBox.js"></script>
 
+    <script src="components/archive/podcast/PodcastCtrl.js"></script>
+
     <script src="components/archive/ArchiveService.js"></script>
     <script src="components/archive/PodcastService.js"></script>
 
