--- a/app/index.html
+++ b/app/index.html
@@ -79,6 +79,8 @@
 
     <script src="components/shared/namelist/nameList.js"></script>
 
+    <script src="components/shared/mediaImage.js"></script>
+
     <!-- start page -->
 	<script src="components/livelist/LiveListCtrl.js"></script>
 
