--- a/app/index.html
+++ b/app/index.html
@@ -121,6 +121,8 @@
 
     <script src="components/archive/podcast/PodcastCtrl.js"></script>
 
+    <script src="components/archive/search/ArchiveSearchCtrl.js"></script>
+
     <script src="components/archive/ArchiveService.js"></script>
     <script src="components/archive/PodcastService.js"></script>
 
