--- a/app/index.html
+++ b/app/index.html
@@ -81,11 +81,14 @@
 
     <script src="components/shared/mediaImage.js"></script>
 
+    <script src="components/shared/enter.js"></script>
+
     <!-- start page -->
 	<script src="components/livelist/LiveListCtrl.js"></script>
 
     <!-- sidebar -->
     <script src="components/sidebar/SidebarCrtl.js"></script>
+    <script src="components/sidebar/SidebarSearchCrtl.js"></script>
     <script src="components/sidebar/AuthenticationSvc.js"></script>
 	<script src="components/shared/equals.js"></script>
 	<script src="components/shared/formerror.js"></script>
