footer on all pages

--- a/app/index.html
+++ b/app/index.html
@@ -79,6 +79,8 @@
 
     <script src="components/shared/namelist/nameList.js"></script>
 
+    <script src="components/shared/footer/snotesfooter.js"></script>
+
     <script src="components/shared/mediaImage.js"></script>
 
     <script src="components/shared/enter.js"></script>
