start-page: add non-live episode

--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,7 @@
 	<!-- bower:css -->
 	<link rel="stylesheet" href="bower_components/spectrum/spectrum.css" />
 	<link rel="stylesheet" href="bower_components/angular-busy/dist/angular-busy.css" />
+	<link rel="stylesheet" href="bower_components/angucomplete-alt/angucomplete-alt.css" />
 	<!-- endbower -->
 	<!-- endbuild -->
 	<!-- build:css(.tmp) styles/main.css -->
@@ -68,6 +69,7 @@
 	<script src="bower_components/restangular/dist/restangular.js"></script>
 	<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 	<script src="bower_components/angular-socket-io/socket.js"></script>
+	<script src="bower_components/angucomplete-alt/angucomplete-alt.js"></script>
 	<!-- endbower -->
 	<script src="bower_components/ngLocale/angular-locale_de-de.js"></script>
 	<script src="bower_components/socket.io-client/socket.io.js"></script>
