create non-live: show last episode numbers

--- a/app/index.html
+++ b/app/index.html
@@ -81,6 +81,8 @@
 
     <script src="components/shared/namelist/nameList.js"></script>
 
+    <script src="components/shared/numberlist/numberList.js"></script>
+
     <script src="components/shared/footer/snotesfooter.js"></script>
 
     <script src="components/shared/mediaImage.js"></script>
