use nunjucks with working replace-filter (fixes reaper export)

--- a/app/index.html
+++ b/app/index.html
@@ -67,7 +67,6 @@
 	<script src="bower_components/spectrum/spectrum.js"></script>
 	<script src="bower_components/angular-spectrum-colorpicker/dist/angular-spectrum-colorpicker.js"></script>
 	<script src="bower_components/angular-busy/dist/angular-busy.js"></script>
-	<script src="bower_components/nunjucks/browser/nunjucks.min.js"></script>
 	<script src="bower_components/lodash/dist/lodash.compat.js"></script>
 	<script src="bower_components/restangular/dist/restangular.js"></script>
 	<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
@@ -76,6 +75,7 @@
 	<!-- endbower -->
 	<script src="bower_components/ngLocale/angular-locale_de-de.js"></script>
 	<script src="bower_components/socket.io-client/socket.io.js"></script>
+	<script src="bower_components/nunjucks/browser/nunjucks.js"></script>
 	<!-- endbuild -->
 
 	<!-- build:js({.tmp,app}) scripts/scripts.js -->
