--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,8 @@
 	<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 	<script src="bower_components/angular-socket-io/socket.js"></script>
 	<script src="bower_components/angucomplete-alt/angucomplete-alt.js"></script>
+	<script src="bower_components/angular-translate/angular-translate.js"></script>
+	<script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
 	<!-- endbower -->
 	<script src="bower_components/ngLocale/angular-locale_de-de.js"></script>
 	<script src="bower_components/socket.io-client/socket.io.js"></script>
@@ -101,6 +103,7 @@
     <script src="components/sidebar/AuthenticationSvc.js"></script>
 	<script src="components/shared/equals.js"></script>
 	<script src="components/shared/formerror.js"></script>
+	<script src="components/sidebar/LangCtrl.js"></script>
 
     <!-- user -->
     <script src="components/shared/actionstatus/actionstatus.js"></script>
