--- a/app/index.html
+++ b/app/index.html
@@ -10,11 +10,7 @@
 	<link type="text/plain" rel="author" href="humans.txt" />
 	<meta name="robots" content="index, follow" />
 	<meta name="description" content="Die kollaborative Plattform für Sendungsnotizen" />
-	<meta name="keywords" content="
-	┌─┐┬ ┬┌─┐┬┌─  ┌─┐┌─┐┌─┐
-	├┤ │ ││  ├┴┐  └─┐├┤ │ │
-	└  └─┘└─┘┴ ┴  └─┘└─┘└─┘
-	" />
+	<meta name="keywords" content="shownotes sendungsnotizen mitschrift podcast kollaborativ collaborative" />
 	<base href="/">
 
 	<link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
