--- a/app/index.html
+++ b/app/index.html
@@ -77,7 +77,6 @@
 
 	<!-- build:js({.tmp,app}) scripts/scripts.js -->
 	<script src="components/app.js"></script>
-	<script src="components/config.js"></script>
 
     <script src="components/shared/namelist/nameList.js"></script>
 
@@ -140,6 +139,8 @@
     <script src="components/admin/importstatus/ImportStatusCtrl.js"></script>
     <script src="components/admin/sighting/AdminSightingCtrl.js"></script>
 	<!-- endbuild -->
+
+  <script src="@@configfile"></script>
 
 	<script type="text/javascript" src="//api.flattr.com/js/0.6/load.js?mode=auto" async onload="FlattrLoader.setup();"></script>
 
