extra statistics page reachable

--- a/app/index.html
+++ b/app/index.html
@@ -138,6 +138,9 @@
     <!-- admin -->
     <script src="components/admin/importstatus/ImportStatusCtrl.js"></script>
     <script src="components/admin/sighting/AdminSightingCtrl.js"></script>
+
+    <!-- statistics -->
+    <script src="components/statistics/StatisticsCtrl.js"></script>
 	<!-- endbuild -->
 
   <script src="@@configfile"></script>
